--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "start": "node bless.js"
   },
+  "engines": {
+  "node": "20.13.1"
+},
   "dependencies": {
     "chalk": "^4.1.2",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "puppeteer": "^21.0.0"
   }
 }
